# hmnet

./: .dockerfile  .env  .gitignore  LICENSE  README.md  cmd.sh  docker-compose.yml  generate.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
configs/: hmnet_1stage_L.yaml  hmnet_1stage_S.yaml  hmnet_2stage_L.yaml  hmnet_2stage_XL.yaml  hmnet_3stage_XL.yaml  hmnet_3stage_XL_0W.yaml  hmnet_3stage_XL_128_0W.yaml  hmnet_3stage_XL_128_16W.yaml  hmnet_3stage_XL_128_32W.yaml  hmnet_3stage_XL_128_32_0.yaml  hmnet_3stage_XL_128_32_16.yaml  hmnet_3stage_XL_128_32_32.yaml  hmnet_3stage_XL_128_32_8.yaml  hmnet_3stage_XL_128_64W.yaml  hmnet_3stage_XL_256_256_16.yaml  hmnet_3stage_XL_256_64_0.yaml  hmnet_3stage_XL_LW.yaml  hmnet_3stage_XL_MW.yaml  hmnet_3stage_XL_SW.yaml  hmnet_3stage_XL_XLW.yaml  hmnet_3stage_XL_XLW2.yaml  hmnet_3stage_XL_XLW_LS.yaml  hmnet_3stage_XL_XLW_XLS.yaml  hmnet_3stage_XL_XXLW_XLS.yaml  hmnet_toy.yaml  hnet_1stage_L.yaml  hnet_3stage_XL.yaml  hnet_3stage_XL_SW.yaml  train_toy.yaml
examples/: evaluate_squad.py  hmnet_3stage_XL.py  imdb.py  mnist.py  pred.bash  prepare_imdb_dataset.py  prepare_squad.py  squad.py  visualize_imdb.py  visualize_mnist.py
hmnet/: __init__.py
predictions_backup/: HNet-squad-predictions-hnet_3stage_XL.json
scripts/: ckpt_convert.py  generate.py  model_profiler.py  prepare_imdb_dataset.py  test.py  train.py  train_mnist.py
squad_predictions/: HMNet-squad-predictions-hmnet_3stage_XL_128_32_0.json  HMNet-squad-predictions-hmnet_3stage_XL_128_32_32.json  (+2 more)
test/: model_test.py  module_test.py  test.py  (+1 more)
(+26 files in other folders)
