[project]
name = "hmnet"
version = "0.0.1"
description = "HM-Net"
authors = [
    { name = "Sungwoo Goo", email = "swgoo91@gmail.com" },
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "torch>=2.5.1",
    "triton>=3.2.0",
    "flash_attn>=2.8.2",
    "causal-conv1d>=1.5.2",
    "mamba-ssm>=2.2.5",
    "einops",
    "optree",
    "regex",
    "omegaconf",
]
[project.urls]
Repository = "https://github.com/swgoo/hmnet"

[tool.setuptools.packages.find]
where = ["."]
include = ["hmnet*"]
exclude = ["tests*"]

[build-system]
requires = [
    "setuptools>=61.0.0",
    "wheel",
    "torch",
    "packaging",
    "ninja",
]
build-backend = "setuptools.build_meta"